--- a/works.html
+++ b/works.html
@@ -37,53 +37,13 @@
   <div id="container" class="false_container container"></div>
 
   <div id="container" class="container">
-    <div id="container_olympic" class="pointer">
-      <div id="year" class="lavori_nomi year"> 2020 </div>
-      <div id="olympic_nome" class="lavori_nomi nome"> Olympic explore </div>
-      <img src="images/arrow.png" id="olympic_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Interior design </div>
+      <div id="categoria" class="lavori_nomi categoria color">
+        Deposito Cinerario
     </div>
-    <div id="description_olympic" class="display_none">
-      <!-- <div id="immagine" class="img"></div> -->
-      <img src="images/olympic.png" class="img">
-      <div class="work_description_total">
         <div id="work_description" class="work_description">
-          <!-- Pop up store che promuove i giochi olimpici invernali di Milano Cortina 2026 -->
-          Pop up store that promotes the Milan Cortina 2026 Winter Olympics
-        </div>
-        <div id="work_description2" class="work_description">
-          <!-- Competenze: <br>
-          - Progettazione d'interni <br>
-          - Identità visiva <br>
-          - Service design <br>
-          - Team working -->
-          Skills: <br>
-          - Interior design <br>
-          - Visual identity <br>
-          - Service design <br>
-          - Team working
-        </div>
-        <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/100242791/Olympic-Explore" class="green"> Complete project → </a> </div>
-        </div>
-      </div>
-    <div id="line_works" class="line line_works"></div>
-  </div>
-
-  <div id="container" class="container">
-    <div id="container_deposito" class="pointer">
-      <div id="year" class="lavori_nomi year"> 2019 </div>
-      <div id="deposito_nome" class="lavori_nomi nome"> Deposito Cinerario </div>
-      <img src="images/arrow.png" id="deposito_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Speculative design </div>
-    </div>
-    <div id="description_deposito" class="display_none">
-      <img src="images/deposito.png" class="img">
-      <div class="work_description_total">
-        <div id="work_description" class="work_description">
-          <!-- Installazione di speculative design con lo scopo di far riflettere sulla morte -->
           Communicative machine speculating on death
         </div>
+        <img src="images/deposito.png" class="img">
         <div id="work_description2" class="work_description">
           Skills: <br>
           - Digital interaction <br>
@@ -93,13 +53,11 @@
         </div>
         <div id="work_description3" class="work_description link">
           <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Complete project → </a> <br>
-          <a target="_blank" href="https://speculativeedu.eu/case-study-communicative-machines-speculating-on-death/" class="green"> Mention on SpeculativeEdu → </a> </div>
+          <!-- <a target="_blank" href="https://speculativeedu.eu/case-study-communicative-machines-speculating-on-death/" class="green"> Mention on SpeculativeEdu → </a> </div> -->
       </div>
-    </div>
     <div id="line_works" class="line line_works"></div>
-  </div>
 
-  <div id="container" class="container">
+  <!-- <div id="container" class="container">
     <div id="container_zefir" class="pointer">
       <div id="year" class="lavori_nomi year"> 2019 </div>
       <div id="zefir_nome" class="lavori_nomi nome"> Zefir </div>
@@ -110,7 +68,6 @@
       <img src="images/zefir.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          <!-- Fictional brand di macchine volanti che manifesta i suoi valori in ogni declinazione. -->
           Fictional flying cars brand that manifests its values ​​in every declination.
         </div>
         <div id="work_description2" class="work_description">
@@ -127,7 +84,7 @@
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
-  </div>
+  </div> -->
 
   <div id="container" class="container">
     <div id="container_izi" class="pointer">
@@ -136,7 +93,7 @@
       <img src="images/arrow.png" id="izi_arrow" class="lavori_nomi arrow">
       <div id="categoria" class="lavori_nomi categoria"> Web experience </div>
     </div>
-    <div id="description_izi" class="display_none">
+    <div id="description_izi" class="">
       <img src="images/izi.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
@@ -158,31 +115,6 @@
     <div id="line_works" class="line line_works"></div>
   </div>
 
-  <div id="container" class="container">
-    <div id="container_diciotti" class="pointer">
-      <div id="year" class="lavori_nomi year"> 2019 </div>
-      <div id="diciotti_nome" class="lavori_nomi nome"> Diciotti's case </div>
-      <img src="images/arrow.png" id="diciotti_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Editorial design </div>
-    </div>
-    <div id="description_diciotti" class="display_none">
-      <img src="images/diciotti.png" class="img">
-      <div class="work_description_total">
-        <div id="work_description" class="work_description">
-          <!-- Analisi crossmediale e transmediale del caso mediatico riguardante la nave Diciotti -->
-          Cross-media and transmedia analysis of the media case regarding the Diciotti ship
-        </div>
-        <div id="work_description2" class="work_description">
-          Skills: <br>
-          - Graphic design <br>
-          - Data visualization
-        </div>
-        <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti" class="green"> Complete project → </a> </div>
-      </div>
-    </div>
-    <div id="line_works" class="line line_works"></div>
-  </div>
 
   <div id="container" class="container">
     <div id="container_arthur" class="pointer">
@@ -191,7 +123,7 @@
       <img src="images/arrow.png" id="arthur_arrow" class="lavori_nomi arrow">
       <div id="categoria" class="lavori_nomi categoria"> Game design </div>
     </div>
-    <div id="description_arthur" class="display_none">
+    <div id="description_arthur" class="">
       <img src="images/arthur.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
@@ -209,139 +141,6 @@
     </div>
     <div id="line_works" class="line line_works"></div>
   </div>
-
-  <div id="container" class="container">
-    <div id="container_sparkle" class="pointer">
-      <div id="year" class="lavori_nomi year"> 2018 </div>
-      <div id="sparkle_nome" class="lavori_nomi nome"> Sparkle cruises </div>
-      <img src="images/arrow.png" id="sparkle_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Brand identity </div>
-    </div>
-    <div id="description_sparkle" class="display_none">
-      <img src="images/sparkle.png" class="img">
-      <div class="work_description_total">
-        <div id="work_description" class="work_description">
-          <!-- Fictional brand di crociere che si distingue dai suoi competitors e soddisfa i bisogni del proprio target. -->
-          Fictional cruise brand that stands out from its competitors and meets the needs of its target.
-        </div>
-        <div id="work_description2" class="work_description">
-          Skills: <br>
-          - Graphic design <br>
-          - Adv campaign <br>
-          - Team working
-        </div>
-        <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/91335651/Sparkle-Cruises" class="green"> Complete project → </a>
-        </div>
-      </div>
-    </div>
-    <div id="line_works" class="line line_works"></div>
-  </div>
-
-  <div id="container" class="container">
-    <div id="container_assunta" class="pointer">
-      <div id="year" class="lavori_nomi year"> 2018 </div>
-      <div id="assunta_nome" class="lavori_nomi nome"> Oratorio in festa </div>
-      <img src="images/arrow.png" id="assunta_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Visual identity </div>
-    </div>
-    <div id="description_assunta" class="display_none">
-      <img src="images/assunta.png" class="img">
-      <div class="work_description_total">
-        <div id="work_description" class="work_description">
-          Visual identity and social campaign for the Sotto il Monte's summer festival.
-        </div>
-        <div id="work_description2" class="work_description">
-          Skills: <br>
-          - Graphic design <br>
-          - Visual identity <br>
-          - Social campaign
-        </div>
-        <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.instagram.com/sottoilmonteinfesta/?hl=it" class="green"> Instagram page → </a>
-        </div>
-      </div>
-    </div>
-    <div id="line_works" class="line line_works"></div>
-  </div>
-
-  <div id="container" class="container">
-    <div id="container_mengoni" class="pointer">
-      <div id="year" class="lavori_nomi year"> 2018 </div>
-      <div id="mengoni_nome" class="lavori_nomi nome"> Atlantico Mengoni </div>
-      <img src="images/arrow.png" id="mengoni_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Vector illustration </div>
-    </div>
-    <div id="description_mengoni" class="display_none">
-      <img src="images/mengoni.png" class="img">
-      <div class="work_description_total">
-        <div id="work_description" class="work_description">
-          <!-- Elaborato grafico per la promozione dell’album “Atlantico” di Marco Mengoni. -->
-          Graphic project for the promotion of Marco Mengoni's "Atlantico" album.
-        </div>
-        <div id="work_description2" class="work_description">
-          Skills: <br>
-          - Graphic design <br>
-          - Drawing
-        </div>
-      </div>
-    </div>
-    <div id="line_works" class="line line_works"></div>
-  </div>
-
-  <div id="container" class="container">
-    <div id="container_whyracism" class="pointer">
-      <div id="year" class="lavori_nomi year"> 2018 </div>
-      <div id="whyracism_nome" class="lavori_nomi nome"> Whyracism </div>
-      <img src="images/arrow.png" id="whyracism_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Editorial design </div>
-    </div>
-    <div id="description_whyracism" class="display_none">
-      <img src="images/whyracism.png" class="img">
-      <div class="work_description_total">
-        <div id="work_description" class="work_description">
-          <!-- Elaborato editoriale che vuole far riflettere sulla discriminazione. -->
-          Editorial design project on discrimination.
-        </div>
-        <div id="work_description2" class="work_description">
-          Skills: <br>
-          - Graphic design <br>
-          - Data visualisation
-        </div>
-        <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/100247853/Whyracism" class="green"> Complete project → </a> </div>
-      </div>
-    </div>
-    <div id="line_works" class="line line_works"></div>
-  </div>
-
-  <div id="container" class="container">
-    <div id="container_haaring" class="pointer">
-      <div id="year" class="lavori_nomi year"> 2017 </div>
-      <div id="haaring_nome" class="lavori_nomi nome"> Keith Haring video </div>
-      <img src="images/arrow.png" id="haaring_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Animated video </div>
-    </div>
-    <div id="description_haaring" class="display_none">
-      <img src="images/haaring.png" class="img">
-      <div class="work_description_total">
-        <div id="work_description" class="work_description">
-          <!-- Animazione che dà vita ai personaggi dell'opera di Keth Haring. -->
-          Animation that brings to life the characters of Keth Haring's work.
-        </div>
-        <div id="work_description2" class="work_description">
-          Skills: <br>
-          - Illustration <br>
-          - Animation <br>
-          - Storytelling
-        </div>
-        <div id="work_description3" class="work_description link">
-          <a href="https://www.youtube.com/watch?v=IEjQcTmEZsI&feature=youtu.be" class="green" target="_blank"> Video → </a> </div>
-      </div>
-    </div>
-    <div id="line_works" class="line line_works"></div>
-  </div>
-
 
 
 </div>
