--- a/works.html
+++ b/works.html
@@ -36,26 +36,82 @@
 <div id="body">
   <div id="container" class="false_container container"></div>
 
-  <div id="container" class="container">
+  <div id="container" class="container container_deposito">
       <div id="categoria" class="lavori_nomi categoria color">
         Deposito Cinerario
     </div>
-        <div id="work_description" class="work_description">
+        <div id="work_description" class="work_description work1">
           Communicative machine speculating on death
         </div>
         <img src="images/deposito.png" class="img">
-        <div id="work_description2" class="work_description">
+        <div id="work_description2" class="work_description work2 margin_top">
+          University project <br>
+          Sep 2019 - Mar 2020
+        </div>
+        <div id="work_description2" class="work_description work3 margin_top">
           Skills: <br>
           - Digital interaction <br>
           - UI / UX <br>
           - Web programming <br>
           - Space design
         </div>
-        <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Complete project → </a> <br>
+        <div id="work_description3" class="work_description work4 link margin_top">
+          <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Watch the complete project → </a> <br>
           <!-- <a target="_blank" href="https://speculativeedu.eu/case-study-communicative-machines-speculating-on-death/" class="green"> Mention on SpeculativeEdu → </a> </div> -->
       </div>
     <div id="line_works" class="line line_works"></div>
+  </div>
+
+
+  <div id="container" class="container container_izi">
+      <div id="categoria" class="lavori_nomi categoria color">
+        Izi photo mosaic
+    </div>
+        <div id="work_description" class="work_description work1">
+          Common digital space that invites users to collaborate
+        </div>
+        <img src="images/izi.png" class="img">
+        <div id="work_description2" class="work_description work2 margin_top">
+          University project <br>
+          Dec 2019 - Jan 2020
+        </div>
+        <div id="work_description2" class="work_description work3 margin_top">
+          Skills: <br>
+          - Digital interaction <br>
+          - UI / UX <br>
+          - Web programming
+        </div>
+        <div id="work_description3" class="work_description work4 link margin_top">
+          <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Watch the complete project → </a> <br>
+            <a target="_blank" href="https://drawwithcode.github.io/2019-group-10-1/" class="green"> Or try it here → </a> <br>
+      </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
+  <div id="container" class="container container_arthur">
+      <div id="categoria" class="lavori_nomi categoria color">
+        Arthur's Chronicles
+    </div>
+        <div id="work_description" class="work_description work1">
+          Platform video game inspired by "The Sword in the Stone"
+        </div>
+        <img src="images/arthur.png" class="img">
+        <div id="work_description2" class="work_description work2 margin_top">
+          University project <br>
+          Feb 2019 - May 2019
+        </div>
+        <div id="work_description2" class="work_description work3 margin_top">
+          Skills: <br>
+          - 3D modeling <br>
+          - Graphic design <br>
+          - Web programing
+        </div>
+        <div id="work_description3" class="work_description work4 link margin_top">
+          <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Watch the complete project → </a> <br>
+            <a target="_blank" href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Or try it here → </a> <br>
+      </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
 
   <!-- <div id="container" class="container">
     <div id="container_zefir" class="pointer">
@@ -85,62 +141,6 @@
     </div>
     <div id="line_works" class="line line_works"></div>
   </div> -->
-
-  <div id="container" class="container">
-    <div id="container_izi" class="pointer">
-      <div id="year" class="lavori_nomi year"> 2019 </div>
-      <div id="izi_nome" class="lavori_nomi nome"> Izi photo mosaic </div>
-      <img src="images/arrow.png" id="izi_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Web experience </div>
-    </div>
-    <div id="description_izi" class="">
-      <img src="images/izi.png" class="img">
-      <div class="work_description_total">
-        <div id="work_description" class="work_description">
-          <!-- Spazio digitale comune che invita gli utenti alla collaborazione -->
-          Common digital space that invites users to collaborate
-        </div>
-        <div id="work_description2" class="work_description">
-          Skills: <br>
-          - Digital interaction <br>
-          - UX / UI <br>
-          - Web programming <br>
-        </div>
-        <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://drawwithcode.github.io/2019-group-10-1/" class="green"> Try it here → </a> <br>
-          <a target="_blank" href="https://www.behance.net/gallery/100250837/Izi-photo-mosaic" class="green"> Complete project → </a>
-      </div>
-      </div>
-    </div>
-    <div id="line_works" class="line line_works"></div>
-  </div>
-
-
-  <div id="container" class="container">
-    <div id="container_arthur" class="pointer">
-      <div id="year" class="lavori_nomi year"> 2018 </div>
-      <div id="arthur_nome" class="lavori_nomi nome"> Arthur's Chronicles </div>
-      <img src="images/arrow.png" id="arthur_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Game design </div>
-    </div>
-    <div id="description_arthur" class="">
-      <img src="images/arthur.png" class="img">
-      <div class="work_description_total">
-        <div id="work_description" class="work_description">
-          <!-- Videogioco platform che racconta la continuazione de “La spada nella roccia” -->
-          Platform video game that tells the continuation of "The Sword in the Stone"
-        </div>
-        <div id="work_description2" class="work_description">
-          Skills: <br>
-          - 3D modeling <br>
-          - Graphic design
-        </div>
-        <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Try it here (only for computer) → </a></div>
-      </div>
-    </div>
-    <div id="line_works" class="line line_works"></div>
-  </div>
 
 
 </div>
