--- a/works.html
+++ b/works.html
@@ -93,7 +93,7 @@
         Arthur's Chronicles
     </div>
         <div id="work_description" class="work_description work1">
-          Platform video game inspired by "The Sword in the Stone"
+          Platform video game inspired by "The sword in the stone"
         </div>
         <img src="images/arthur.png" class="img">
         <div id="work_description2" class="work_description work2 margin_top">
