--- a/works.html
+++ b/works.html
@@ -30,7 +30,8 @@
     <div class="exit" id="exit"></div>
     <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
     <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
-    <a  class="contact_popup" href="https://www.behance.net/elisamanzoni">behance/elisamanzoni</a>
+    <a  class="contact_popup" target="_blank" href="https://www.behance.net/elisamanzoni">behance/elisamanzoni</a><br>
+    <a  class="contact_popup" target="_blank" href="https://www.linkedin.com/in/elisa-manzoni-45919519b/">linkedin/elisamanzoni</a>
   </div>
 
 <div id="body">
@@ -56,7 +57,7 @@
           - Space design
         </div>
         <div id="work_description3" class="work_description work4 link margin_top">
-          <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Watch the complete project → </a> <br>
+          <a href="deposito.html" class="green"> Watch the complete project → </a> <br>
           <!-- <a target="_blank" href="https://speculativeedu.eu/case-study-communicative-machines-speculating-on-death/" class="green"> Mention on SpeculativeEdu → </a> </div> -->
       </div>
     <div id="line_works" class="line line_works"></div>
@@ -82,7 +83,7 @@
           - Web programming
         </div>
         <div id="work_description3" class="work_description work4 link margin_top">
-          <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Watch the complete project → </a> <br>
+          <a href="izi.html" class="green"> Watch the complete project → </a> <br>
             <a target="_blank" href="https://drawwithcode.github.io/2019-group-10-1/" class="green"> Or try it here → </a> <br>
       </div>
     <div id="line_works" class="line line_works"></div>
