--- a/about.html
+++ b/about.html
@@ -27,11 +27,12 @@
     <div id="line_header" class="line line_header"></div>
   </div>
 
-  <div id="contact_container" class=" display_none">
+  <div id="contact_container" class="contact_container_sparito display_none">
     <div class="exit" id="exit"></div>
     <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
-    <a class="contact_popup" href="tel:+393486581621">3486581621</a><br>
-    <a class="contact_popup" href="https://www.behance.net/elisamanzoni">behance/elisamanzoni</a>
+    <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
+    <a  class="contact_popup" target="_blank" href="https://www.behance.net/elisamanzoni">behance/elisamanzoni</a><br>
+    <a  class="contact_popup" target="_blank" href="https://www.linkedin.com/in/elisa-manzoni-45919519b/">linkedin/elisamanzoni</a>
   </div>
 
   <div id="body" class="body">
