--- a/deposito.html
+++ b/deposito.html
@@ -60,7 +60,7 @@
 
     <div id="main-images" class="container">
       <img src="images/deposito.png" class="img">
-      <img src="images/deposito.png" class="img margin_left">
+      <img src="images/deposito1.png" class="img margin_left">
     </div>
 
     <div id="secondary-description" class="container process bold margin_top">
@@ -95,8 +95,8 @@
         </div>
       </div>
       <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/deposito.png" class="img">
-        <img src="images/deposito.png" class="img">
+        <img src="images/deposito4.png" class="img">
+        <img src="images/deposito5.png" class="img">
       </div>
     </div>
 
@@ -111,8 +111,8 @@
         </div>
       </div>
       <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/deposito.png" class="img">
-        <img src="images/deposito.png" class="img">
+        <img src="images/deposito6.png" class="img">
+        <img src="images/deposito7.png" class="img">
       </div>
     </div>
 
@@ -125,8 +125,8 @@
         </div>
       </div>
       <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/deposito.png" class="img">
-        <img src="images/deposito.png" class="img">
+        <img src="images/deposito8.png" class="img">
+        <img src="images/deposito9.png" class="img">
       </div>
     </div>
 
@@ -142,8 +142,8 @@
        </div>
       </div>
       <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/deposito.png" class="img">
-        <img src="images/deposito.png" class="img">
+        <img src="images/deposito10.png" class="img">
+        <img src="images/deposito11.png" class="img">
       </div>
     </div>
 
