--- a/izi.html
+++ b/izi.html
@@ -63,7 +63,7 @@
 
     <div id="main-images" class="container">
       <img src="images/izi.png" class="img">
-      <img src="images/izi.png" class="img margin_left">
+      <img src="images/izi1.png" class="img margin_left">
     </div>
 
     <div id="secondary-description" class="container process bold margin_top">
@@ -76,11 +76,10 @@
         <a class='bold'>1. Define the user journey and tools</a> <br>
         The goal was to create a simple and intuitive web experience, so we designed only 3 pages, one with instructions, one where people can take the picture and one with the mosaic.
         We also the defined the software scheme: everytime that a person send a picture, it will be stored in a digital space (Firebase) and than uploaded in the mosaic in the right position.
-        </div>
+        <br><br></div>
       </div>
       <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/deposito.png" class="img">
-        <img src="images/deposito.png" class="img">
+        <img src="images/izi_user.png" class="img_long">
       </div>
     </div>
 
@@ -92,8 +91,8 @@
         </div>
       </div>
       <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/deposito.png" class="img">
-        <img src="images/deposito.png" class="img">
+        <img src="images/izi2.png" class="img">
+        <img src="images/izi3.png" class="img">
       </div>
     </div>
 
@@ -106,8 +105,8 @@
         </div>
       </div>
       <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/deposito.png" class="img">
-        <img src="images/deposito.png" class="img">
+        <img src="images/izi4.png" class="img">
+        <img src="images/izi5.png" class="img">
       </div>
     </div>
 
@@ -121,8 +120,8 @@
         </div>
       </div>
       <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/deposito.png" class="img">
-        <img src="images/deposito.png" class="img">
+        <img src="images/izi6.png" class="img">
+        <img src="images/izi7.png" class="img">
       </div>
     </div>
 
