--- a/izi.html
+++ b/izi.html
@@ -75,7 +75,7 @@
         <div class='width'>
         <a class='bold'>1. Define the user journey and tools</a> <br>
         The goal was to create a simple and intuitive web experience, so we designed only 3 pages, one with instructions, one where people can take the picture and one with the mosaic.
-        We also the defined the software scheme: everytime that a person send a picture, it will be stored in a digital space (Firebase) and than uploaded in the mosaic in the right position.
+        We also defined the software scheme: everytime that a person send a picture, it will be stored in a digital space (Firebase) and than uploaded in the mosaic in the right position.
         <br><br></div>
       </div>
       <div id="main-description-2" class='container-small margin_left'>
