--- a/works.html
+++ b/works.html
@@ -89,6 +89,33 @@
     <div id="line_works" class="line line_works"></div>
   </div>
 
+  <div id="container" class="container container_jukebox">
+      <div id="categoria" class="lavori_nomi categoria">
+        <a class='color'>Memory Jukebox</a> <a class="green2">  work in progress </a>
+    </div>
+        <div id="work_description" class="work_description work1">
+          Interactive music toy to prevent senile dementia
+        </div>
+        <img src="images/jukebox.png" class="img">
+        <div id="work_description2" class="work_description work2 margin_top">
+          University project <br>
+          Nov 2020 - Now
+        </div>
+        <div id="work_description2" class="work_description work3 margin_top">
+          Skills: <br>
+          - Prototyping <br>
+          - User experience <br>
+          - User research <br>
+          - C++ programming
+        </div>
+        <div id="work_description3" class="work_description work4 link margin_top">
+          <a href="jukebox.html" class="green"> Watch the complete project → </a> <br>
+
+      </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
+
   <div id="container" class="container container_arthur">
       <div id="categoria" class="lavori_nomi categoria color">
         Arthur's Chronicles
@@ -108,11 +135,11 @@
           - Web programing
         </div>
         <div id="work_description3" class="work_description work4 link margin_top">
-          <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Watch the complete project → </a> <br>
-            <a target="_blank" href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Or try it here → </a> <br>
+            <a target="_blank" href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Try it here → </a> <br>
       </div>
     <div id="line_works" class="line line_works"></div>
   </div>
+
 
   <div id="container" class="container container_behance">
     <target="_blank" href="https://www.behance.net/elisamanzoni">
