--- a/jukebox.html
+++ b/jukebox.html
@@ -63,8 +63,8 @@
     </div>
 
     <div id="main-images" class="container">
-      <iframe width="420" height="315" src="https://www.youtube.com/watch?v=XHa1DRtHyGs&feature=youtu.be&ab_channel=GosiaPostrozny"> </iframe>
-    </div>
+      <iframe width="100%" height="315" src="https://www.youtube.com/embed/XHa1DRtHyGs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+      </div>
 
     <div id="secondary-description" class="container process bold margin_top">
       The process
