--- a/deposito.html
+++ b/deposito.html
@@ -78,8 +78,8 @@
         </div>
       </div>
       <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/deposito.png" class="img">
-        <img src="images/deposito.png" class="img">
+        <img src="images/deposito2.png" class="img">
+        <img src="images/deposito3.png" class="img border">
       </div>
     </div>
 
@@ -96,7 +96,7 @@
       </div>
       <div id="main-description-2" class='container-small margin_left'>
         <img src="images/deposito4.png" class="img">
-        <img src="images/deposito5.png" class="img">
+        <img src="images/deposito5.png" class="img border">
       </div>
     </div>
 
