--- a/works.html
+++ b/works.html
@@ -142,7 +142,8 @@
 
 
   <div id="container" class="container container_behance">
-    <target="_blank" href="https://www.behance.net/elisamanzoni">
+    <a target="_blank" href="https://www.behance.net/elisamanzoni">
+
     <div id="link_progetti" class="link_progetti">Watch more projects on my Behance
       <img src="images/arrow_right.png" class="arrow_right arrow_right1"></div></a>
   </div>
